<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastrarAluno">

    <EditText
        android:id="@+id/idNomeCadastrarAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/cadastrar_aluno_nome"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/idEmailCadastrarAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/cadastrar_aluno_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/idNomeCadastrarAluno" />

    <EditText
        android:id="@+id/idSenhaCadastrarAluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/cadastrar_aluno_senha"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/idEmailCadastrarAluno" />

    <TextView
        android:id="@+id/cadastrar_aluno_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/cadastrar_aluno_titulo"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/idNomeCadastrarAluno"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cadastrar_aluno_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/cadastrar_aluno_button"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@+id/idSenhaCadastrarAluno"
        tools:layout_editor_absoluteX="35dp" />

</androidx.constraintlayout.widget.ConstraintLayout>