<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <Button
        android:id="@+id/login_button_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/login_entrar_button"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <Button
        android:id="@+id/login_button_cadastrar_professor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/login_cadastrar_button_professor"
        app:layout_constraintTop_toBottomOf="@+id/login_button_entrar"/>
    <Button
        android:id="@+id/login_button_cadastrar_aluno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/login_cadastrar_button_aluno"
        app:layout_constraintTop_toBottomOf="@+id/login_button_cadastrar_professor"/>

    <Button
        android:id="@+id/login_button_recuperarSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/login_recuperarSenha_button"
        app:layout_constraintEnd_toEndOf="@+id/login_button_cadastrar_aluno"
        app:layout_constraintTop_toBottomOf="@+id/login_button_cadastrar_aluno"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/login_button_cadastrar_aluno"
        app:layout_constraintStart_toStartOf="@+id/login_button_cadastrar_aluno">

    </com.google.android.gms.common.SignInButton>

</androidx.constraintlayout.widget.ConstraintLayout>